--- a/server/.env
+++ b/server/.env
@@ -11,3 +11,4 @@ EMAIL_USERNAME = a6e9a131f33f5d
 EMAIL_PASSWORD = 2d4109a95d8527
 GEOCODER_PROVIDER=mapquest
 GEOCODER_API_KEY = aAqg5zqCLNORSb6ouhFJK79cegcH9bhR
+FRONTEND_URL = https://home-market-place-sooty.vercel.app
