--- a/client/.env
+++ b/client/.env
@@ -1,3 +1,3 @@
-VITE_IMAGES_URL = http://localhost:3000
+VITE_IMAGES_URL = http://localhost:3000/
 VITE_MAPQUEST_API_KEY =WfsECG1O8AfEGgtkRZtiRDoloz2H1OM5
 VITE_BASE_URL = http://localhost:3000/
